--- a/requirements.txt
+++ b/requirements.txt
@@ -4,21 +4,25 @@ async-timeout==4.0.2
 attrs==22.1.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
+click==8.1.3
 configparser==5.3.0
 discord==2.0.0
 discord.py==2.0.1
 docopt==0.6.2
+Flask==2.2.2
 frozenlist==1.3.1
 greenlet==1.1.3
 idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 multidict==6.0.2
-pip==22.2.2
 pipreqs==0.4.11
 python-dateutil==2.8.2
 requests==2.28.1
-setuptools==63.2.0
 six==1.16.0
 SQLAlchemy==1.4.41
 urllib3==1.26.12
+Werkzeug==2.2.2
 yarg==0.1.9
 yarl==1.8.1
