--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.8.3
 aiosignal==1.2.0
+APScheduler==3.9.1
 async-timeout==4.0.2
 attrs==22.1.0
 certifi==2022.9.24
@@ -19,9 +20,13 @@ MarkupSafe==2.1.1
 multidict==6.0.2
 pipreqs==0.4.11
 python-dateutil==2.8.2
+pytz==2022.4
+pytz-deprecation-shim==0.1.0.post0
 requests==2.28.1
 six==1.16.0
 SQLAlchemy==1.4.41
+tzdata==2022.4
+tzlocal==4.2
 urllib3==1.26.12
 Werkzeug==2.2.2
 yarg==0.1.9
