--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,65 @@
+aiofiles==22.1.0
 aiohttp==3.8.3
 aiosignal==1.2.0
+aiosqlite==0.17.0
+anyio==3.6.1
 APScheduler==3.9.1
+async-lru==1.0.3
 async-timeout==4.0.2
 attrs==22.1.0
+beautifulsoup4==4.11.1
+bs4==0.0.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 configparser==5.3.0
+Cython==0.29.32
+databases==0.6.1
+decorator==5.1.1
 discord==2.0.0
 discord.py==2.0.1
 docopt==0.6.2
+fastapi==0.85.0
+fire==0.4.0
 Flask==2.2.2
+frequency-controller==0.0.6
 frozenlist==1.3.1
 greenlet==1.1.3
+h11==0.14.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
+jsonpath-rw==1.4.0
+jsonpath-rw-ext==1.2.2
+lxml==4.9.1
 MarkupSafe==2.1.1
 multidict==6.0.2
+objectpath==0.6.1
+pbr==5.10.0
 pipreqs==0.4.11
+ply==3.11
+pydantic==1.10.2
 python-dateutil==2.8.2
 pytz==2022.4
 pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
 requests==2.28.1
+selectolax==0.3.11
 six==1.16.0
+sniffio==1.3.0
+soupsieve==2.3.2.post1
 SQLAlchemy==1.4.41
+starlette==0.20.4
+termcolor==2.0.1
+toml==0.10.2
+torequests==6.0.0
+typing_extensions==4.4.0
 tzdata==2022.4
 tzlocal==4.2
+uniparser==3.0.2
 urllib3==1.26.12
+uvicorn==0.18.3
 Werkzeug==2.2.2
 yarg==0.1.9
 yarl==1.8.1
